# reddit_youtube_bot

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  hub_verification_request.http  new_video_request.http
frontend/: landing_page.html  link_subscription.html  reddit_account.html  reddit_accounts.html  register_subreddit.html  subreddit.html  subscription.html  subscriptions.html
frontend/partials/: delete_modal.html  detail_card.html  form_actions.html
migrations/: 20251126201131_init.sql
src/: cli.rs  main.rs
src/frontend_templates/: base_layout.html  landing_page.html
src/infrastructure/: app_state.rs  connect.rs  mod.rs  scheduler.rs  settings.rs
src/server/: forms.rs  frontend.rs  google.rs  mod.rs  reddit.rs  repository.rs  server.rs  shared.rs
