[package]
name = "reddit_youtube_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
