[package]
name = "reddit_youtube_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["form", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
handlebars = "6.4.0"
hmac = "0.12.1"
quick-xml = { version = "0.38.4", features = ["serialize"] }
reqwest = { version = "0.13.1", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-textual = "0.1.1"
serde_json = "1.0.149"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["time"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "v7"] }
